--- a/app/views/admin/users/show.html.haml
+++ b/app/views/admin/users/show.html.haml
@@ -1,4 +1,4 @@
-- title "mintt: admin | Users > #{user_full_name(@user)}"
+- title "mintt: admin | Candidate > #{user_full_name(@user)}"
 
 .text
   .left_box
