--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,7 +12,7 @@
 
   %body
     - flash.each do |key, value|
-      %div{:id => "flash_#{key}"}= h value
+      #flash{ :class => "flash_#{key}"}= h value
     #global
       #header
         #halo
