--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,4 +1,4 @@
-%h2.headline= "mintt is a course for EPFL PhD students organized by EPFL Technology Transfer Office."
+%h2.headline= "mintt is a course for EPFL PhD students organized by EPFL Tech Transfer Office"
 .text
   %p= "It is part of the EPFL Doctoral School under the College of Management of Technology program."
   %h4= "Objectives"
