--- a/app/views/pages/modules.html.haml
+++ b/app/views/pages/modules.html.haml
@@ -127,12 +127,12 @@
       = image_tag "/images/photos/default.png", :alt => "External Speaker"
       %h4
         = "Philippe Eyries"
-      -#  %em= "to be announced"
-      -#- link_to "", :class => "bio", :onclick => "window.open(this); return false" do
-      -#  %span= "Biography"
+        %em= "External speaker NEXThink Chairman"
+      - link_to "http://ch.linkedin.com/pub/philippe-eyries/5/a33/8a3", :class => "bio", :onclick => "window.open(this); return false" do
+        %span= "Biography"
     .right
       %h3
         %strong= "Module 9"
         = "From innovation to sales. A long way?"
-      .desc= "He will explain and prove that you will enjoy selling. If you like to sell (you will like selling if you like people). If you can explain clearly  (i) the existing (pain (ii) the solution and (iii) the value proposition). If you choose the right direction (selected target) the right person (early adopters). If you accept help from network (partners)."
+      .desc= "He will explain and prove that you will enjoy selling: If you like people. If you can explain clearly (i) the existing pain, (ii) the solution and (iii) the value proposition. If you choose the right direction and the right person. If you accept help from your network of partners."
     
