Adding new features :
- "registration" => "application"
- /register => /apply
- Adding Mehdi in cc for each new application
- Messages archive added

--- a/app/views/admin/messages/index.html.haml
+++ b/app/views/admin/messages/index.html.haml
@@ -2,6 +2,8 @@
 .text
   %h3= "Messages"
   
+  = action_name == 'index' ? link_to('Trash', trash_admin_messages_path) : link_to('Inbox', admin_messages_path)
+  
   %table
     - 5.times do
       %col{ :class => cycle("even", "odd") }
