--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -12,8 +12,8 @@ a#admin_label {
 
 a#admin_label span {display:none;}
 
-#content.admin.index {
-  width:960px;
+#content.admin.index, #content.admin.users {
+  width:880px;
 }
 
 #content.admin table {
@@ -65,7 +65,7 @@ a#admin_label span {display:none;}
 }
 
 #content.admin table td.from {
-  width:580px;
+  width:520px;
 }
 
 #content.admin table td.from h4 {
@@ -103,12 +103,27 @@ a#admin_label span {display:none;}
   padding:20px 0 0;
 }
 
-#content .left_box {
-  width:110px;
+#content .sheet .left_box {
+  width:100px;
   float:left;
 }
 
-#content .right_box {
+#content .sheet .right_box {
   float:left;
-  width:490px;
+  width:460px;
 }
+
+#content .text.sheet {
+  padding:20px;
+  background:#111;
+  -webkit-border-radius:10px;
+  -moz-border-radius:10px;
+}
+
+#content .text.sheet .text_box p {
+  border-top:1px solid #333;
+  padding:15px 0 0;
+  margin-top:15px;
+}
+
+#content .text.sheet .text_box.last {border-bottom:none;}
