Add confirmation_link snippet in the 'help' for mail template edition

--- a/app/views/admin/mail_templates/edit.html.haml
+++ b/app/views/admin/mail_templates/edit.html.haml
@@ -29,3 +29,4 @@
     %li Admission date : <span>user.thesis_admission_date</span>
     %li Thesis invention : <span>user.thesis_invention</span>
     %li Motivation text : <span>user.motivation</span>
+    %li Confirmation link : <span>user.confirmation_link</span>
