Adding 'back to [inbox|trash]' links and delete button in the swho message view

--- a/app/views/admin/messages/show.html.haml
+++ b/app/views/admin/messages/show.html.haml
@@ -3,6 +3,10 @@
 .text
   %h3= "Message"
   
+  = back_to_inbox_or_trash(@message)
+  |
+  = button_to("delete", admin_message_path(@message), :confirm => "Are you sure?", :method => :delete, :id => "delete_message_#{@message.id}", :class => "button delete")
+  
   #from= "From: #{message_sender_name_with_email(@message)}"
   
   #received= "Date: #{time_ago_in_words(@message.created_at)}"
