--- a/app/views/admin/users/show.html.haml
+++ b/app/views/admin/users/show.html.haml
@@ -5,12 +5,23 @@
     = image_tag "/images/admin/#{@user.gender}_big.png", :alt => @user.gender
   .right_box
     %h3= user_full_name(@user)
-    %p= mail_to @user.email
+    %p.email
+      = image_tag "/images/admin/email.png", :alt => "Email"
+      = mail_to @user.email
   .spacer
-  %p= "<strong>Faculty</strong>: #{@user.faculty}"
-  %p= "<strong>Phone</strong>: #{@user.phone}"
-  %p= "<strong>Url</strong>: #{user_url(@user)}"
-  %p= "<strong>LinkedIn url</strong>: #{user_linkedin_url(@user)}"
+  .card
+    %p
+      = image_tag "/images/admin/faculty.png", :alt => "Faculty"
+      = @user.faculty.capitalize
+    %p
+      = image_tag "/images/admin/phone.png", :alt => "Phone"
+      = @user.phone
+    %p
+      = image_tag "/images/admin/web.png", :alt => "Url"
+      = user_url(@user)
+    %p
+      = image_tag "/images/admin/linkedin.png", :alt => "LinkedIn"
+      = user_linkedin_url(@user)
   .text_box
     %p= "<strong>Thesis supervisor</strong>: #{@user.thesis_supervisor}"
     %p= "<strong>Thesis subject</strong>: #{@user.thesis_subject}"
@@ -21,10 +32,10 @@
     %p= "<strong>Subject to EPFL doctoral school regulations and does he/she needs credits?</strong>: #{@user.doctoral_school_rules}"
     %p= "<strong>Motivation</strong>: #{@user.motivation}"
   
-  %p= "<strong>Comment</strong>:"
-  - semantic_form_for [:admin, @user], :html => { :class => "main" } do |f|
-    - f.inputs do
-      = f.input :comment, :as => :text
+    %p
+    - semantic_form_for [:admin, @user], :html => { :class => "main" } do |f|
+      - f.inputs do
+        = f.input :comment, :as => :text
       
-    - f.buttons do
-      = f.commit_button "Save comment"
+      - f.buttons do
+        = f.commit_button "Save comment"
