--- a/app/views/admin/messages/show.html.haml
+++ b/app/views/admin/messages/show.html.haml
@@ -5,6 +5,8 @@
   
   = back_to_inbox_or_trash(@message)
   |
+  = button_to("reply", admin_message_path(@message), :method => :put, :id => "reply_message_#{@message.id}", :class => "button reply")
+  |
   = button_to("delete", admin_message_path(@message), :confirm => "Are you sure?", :method => :delete, :id => "delete_message_#{@message.id}", :class => "button delete")
   
   #from= "From: #{message_sender_name_with_email(@message)}"
