--- a/app/views/admin/messages/show.html.haml
+++ b/app/views/admin/messages/show.html.haml
@@ -9,10 +9,11 @@
   |
   = button_to("delete", admin_message_path(@message), :confirm => "Are you sure?", :method => :delete, :id => "delete_message_#{@message.id}", :class => "button delete")
   
-  #from= "From: #{message_sender_name_with_email(@message)}"
+  #from= "From: #{message_sender_name_with_email_and_mailto(@message)}"
   
   #received= "Date: #{time_ago_in_words(@message.created_at)}"
   
+  = mail_to(@message.sender_email, 'reply', :encode => "hex", :body => "#{message_sender_name_with_email(@message)} wrote on #{@message.created_at}:\n\n#{@message.content}", :class => "link")
   %hr
   
   #content= @message.content
