Improved message show

--- a/app/views/admin/mail_templates/show.html.haml
+++ b/app/views/admin/mail_templates/show.html.haml
@@ -1,6 +1,6 @@
 - title "mintt: admin | Mail templates > #{mail_template_title(@mail_template)}"
 
-.text
+.text.mail
   %h3= "Mail template"
   
   %hr
