--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -103,6 +103,34 @@ a#admin_label span {display:none;}
   padding:20px 0 0;
 }
 
+#content.admin .actions_right {
+  position:absolute;
+  top:0;
+  right:0;
+}
+
+#content.admin .actions_left input {
+  background:#111;
+  border:none;
+  padding:10px;
+  margin:6px 10px 6px 0;
+  color:#fff;
+  font-size:14px;
+  float:left;
+  -webkit-border-radius:8px;
+  -moz-border-radius:8px;
+}
+
+#content.admin .actions_left input.mark_as_replied {
+  padding-left:40px;
+  background:#111 url(/images/admin/replied_icon.png) no-repeat 10px 50%;
+}
+
+#content.admin .actions_left input.move_to_trash {
+  padding-left:40px;
+  background:#111 url(/images/admin/trash.png) no-repeat 10px 50%;
+}
+
 #content .sheet .left_box {
   width:100px;
   float:left;
