Fixed some bugs and added some improvements following the meeting with the Mintt board

--- a/app/views/admin/mail_templates/edit.html.haml
+++ b/app/views/admin/mail_templates/edit.html.haml
@@ -15,18 +15,18 @@
   %p Insert a tag with {{the_tag_here}}
   
   %ul
+    %li Confirmation link : <span>user.confirmation_link</span>
     %li First name : <span>user.first_name</span>
     %li Last name : <span>user.last_name</span>
     %li Full name : <span>user.full_name</span>
     %li Email : <span>user.email</span>
     %li Phone : <span>user.phone</span>
-    %li Faculty : <span>user.faculty</span>
+    %li School : <span>user.school</span>
     %li Url : <span>user.url</span>
-    %li Linkedin_url : <span>user.linkedin_url</span>
+    %li Linkedin url : <span>user.linkedin_url</span>
     %li Thesis supervisor : <span>user.thesis_supervisor</span>
     %li Thesis subject : <span>user.thesis_subject</span>
     %li Thesis registration date : <span>user.thesis_registration_date</span>
     %li Admission date : <span>user.thesis_admission_date</span>
     %li Thesis invention : <span>user.thesis_invention</span>
     %li Motivation text : <span>user.motivation</span>
-    %li Confirmation link : <span>user.confirmation_link</span>
