--- a/app/views/messages/new.html.haml
+++ b/app/views/messages/new.html.haml
@@ -1,6 +1,6 @@
 .text
   %h3= "Contact page"
-  %p= "If you have any question, Please contact us through the following form:"
+  %p= "If you have any question, please contact us through the following form:"
 #register
   - semantic_form_for @message,  :html => { :class => "main" } do |f|
     - f.inputs do
