--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -8,20 +8,20 @@
         %col{ :class => cycle("even", "odd") }
     %tr
       %th
-      %th= link_to "Name", admin_users_path(sort_parameters('first_name'))
-      %th= link_to "Faculty", admin_users_path(sort_parameters('faculty'))
-      %th= link_to "Phone", admin_users_path(sort_parameters('phone'))
+      %th= link_to "Name", admin_users_path(sort_parameters('last_name'))
+      %th= link_to "School", admin_users_path(sort_parameters('school'))
       %th= link_to "Supervisor", admin_users_path(sort_parameters('thesis_supervisor'))
+      %th= link_to "Email", admin_users_path(sort_parameters('email'))
       %th
       %th
       
     - @users.each do |user|
       %tr[user]{ :class => cycle("", "alt") }
         %td.gender= link_to image_tag("/images/admin/#{user.gender}.png", :alt => user.gender), admin_user_path(user)
-        %td= link_to user_full_name(user), admin_user_path(user)
-        %td= user.faculty
-        %td= user.phone
+        %td= link_to user_full_name(user, true), admin_user_path(user)
+        %td= user.school
         %td= user.thesis_supervisor
+        %td= mail_to(user.email, user.email, :encode => 'hex')
         %td= link_to("edit", edit_admin_user_path(user))
         %td= button_to("delete", admin_user_path(user), :confirm => "Are you sure?", :method => :delete, :class => "button delete")
         
