--- a/app/views/pages/modules.html.haml
+++ b/app/views/pages/modules.html.haml
@@ -10,34 +10,21 @@
       %h4
         = "Gabriel Clerc"
         %em= "Head of EPFL-SRI"
-      - link_to "http://sri.epfl.ch/page529.html", :class => "bio", :onclick => "window.open(this); return false" do
+      - link_to "http://sri.epfl.ch/page529-en.html", :class => "bio", :onclick => "window.open(this); return false" do
         %span= "Biography"
+      
       = image_tag "/images/photos/natalia_giovannini.jpg", :alt => "Natalia Giovannini"
       %h4
         = "Natalia Giovannini"
         %em= "Licensing Officer EPFL-SRI"
-      - link_to "http://sri.epfl.ch/page533.html", :class => "bio", :onclick => "window.open(this); return false" do
+      - link_to "http://sri.epfl.ch/page533-en.html", :class => "bio", :onclick => "window.open(this); return false" do
         %span= "Biography"
     .right
       %h3
         %strong= "Module 1"
         = "About inventions and inventors"
       .desc= "This module is focusing on the very beginning of the innovation chain : the invention in a scientific research environment. It will address many questions in this field such as what is an invention? What are the various types of inventions? What is the difference between an invention and a discovery? Who is an inventor, what are his/her main qualities, duties and rights and which benefits he/she might have? Publish and protect, is it compatible? How to at EPFL? etc. The participants will be exposed to real cases and meet also an invited speaker who will talk about his/her experiences as scientist/inventor who participated actively to an innovation adventure."
-
-  - module_box do
-    .left
-      = image_tag "/images/photos/default.png", :alt => "External Speaker"
-      %h4
-        = "External speaker"
-        %em= "to be announced"
-      - link_to "", :class => "bio", :onclick => "window.open(this); return false" do
-        %span= "Biography"
-    .right
-      %h3
-        %strong= "Module 2"
-        = "Real world feedback from an ex-EPFL PhD"
-      .desc= "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-
+      
   - module_box do
     .left
       = image_tag "/images/photos/herve_lebret.jpg", :alt => "Hervé Lebret"
@@ -48,24 +35,24 @@
         %span= "Biography"
     .right
       %h3
-        %strong= "Module 3"
+        %strong= "Module 2"
         = "Evaluate the Potential"
       .desc= "The commercial potential of an invention, will show that no technology has any value by itself. It is as important to consider its applications. Through 2 case studies, the module will aim at sensitize the audience about the gaps that may exist between an invention and its possible product application. A “check-list” listing the evaluation criteria and related questions that an inventor should ask himself for this evaluation will be built by the participants and a synthesis will be provided at the end of the module."
-
+      
   - module_box do
     .left
       = image_tag "/images/photos/francoise_chardonnens.jpg", :alt => "Françoise Chardonnens"
       %h4
         = "Françoise Chardonnens"
         %em= "Lawyer, Licensing Officer EPFL-SRI"
-      - link_to "http://sri.epfl.ch/page530.html", :class => "bio", :onclick => "window.open(this); return false" do
+      - link_to "http://sri.epfl.ch/page530-en.html", :class => "bio", :onclick => "window.open(this); return false" do
         %span= "Biography"
     .right
       %h3
-        %strong= "Module 4"
+        %strong= "Module 3"
         = "Intellectual Property"
       .desc= "Intellectual property deals with the legal protection of inventions, software and other intellectual creations. What kind of protection can you get? What advantages does it bring?  How much does it cost? What are the best protection strategies?  This module will show the benefits and pitfalls of patents, copyright and other intellectual property rights based on real cases."
-    
+      
   - module_box do
     .left
       = image_tag "/images/photos/default.png", :alt => "External Speaker"
@@ -76,24 +63,24 @@
         %span= "Biography"
     .right
       %h3
-        %strong= "Module 5"
+        %strong= "Module 4"
         = "Real World IP experience sharing"
       .desc= "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-
+      
   - module_box do
     .left
       = image_tag "/images/photos/andre_catana.jpg", :alt => "André Catana"
       %h4
         = "André Catana"
         %em= "Licensing Officer EPFL-SRI"
-      - link_to "http://sri.epfl.ch/page532.html", :class => "bio", :onclick => "window.open(this); return false" do
+      - link_to "http://sri.epfl.ch/page532-en.html", :class => "bio", :onclick => "window.open(this); return false" do
         %span= "Biography"
     .right
       %h3
-        %strong= "Module 6"
+        %strong= "Module 5"
         = "Licensing"
       .desc= 'Transferring new technologies and bright inventions to industry is an important mission of the university. As an inventor, having contributed to such technologies and inventions is a great achievement, but, in order to bring them to the market, licensing to industry is a "must" - and it is an absolute reward for the inventors to help making it happen.<br /> This module focuses on licensing, the most common way to transfer technologies. It is a very interactive module combining case studies and examples to illustrate the essential components of the license agreement. It also aims to provide a basis for licensing negotiations.'
-    
+      
   - module_box do
     .left
       = image_tag "/images/photos/default.png", :alt => "External Speaker"
@@ -104,24 +91,24 @@
         %span= "Biography"
     .right
       %h3
-        %strong= "Module 7"
+        %strong= "Module 6"
         = "Negotiation in practice"
       .desc= "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-
+      
   - module_box do
     .left
       = image_tag "/images/photos/mehdi_aminian.jpg", :alt => "Mehdi Aminian"
       %h4
         = "Mehdi Aminian"
         %em= "Licensing Officer EPFL-SRI"
-      - link_to "http://sri.epfl.ch/page531.html", :class => "bio", :onclick => "window.open(this); return false" do
+      - link_to "http://sri.epfl.ch/page531-en.html", :class => "bio", :onclick => "window.open(this); return false" do
         %span= "Biography"
     .right
       %h3
-        %strong= "Module 8"
+        %strong= "Module 7"
         = "Start-up"
       .desc= "  Create a start-up? In some cases it's going to be the only way for its founders to bring an innovation to the market while everybody else has yet to understand its potential.<br /> But before moving forward and create one, it is useful for the aspiring entrepreneur to understand what it takes to do a start-up and what kind of mindset she or he must develop to be up to this demanding and sometimes very rewarding task."
-
+      
   - module_box do
     .left
       = image_tag "/images/photos/default.png", :alt => "External Speaker"
@@ -132,7 +119,6 @@
         %span= "Biography"
     .right
       %h3
-        %strong= "Module 9"
+        %strong= "Module 8"
         = "From innovation to sales. A long way?"
       .desc= "He will explain and prove that you will enjoy selling: If you like people. If you can explain clearly (i) the existing pain, (ii) the solution and (iii) the value proposition. If you choose the right direction and the right person. If you accept help from your network of partners."
-    
