--- a/app/views/registrations/new.html.haml
+++ b/app/views/registrations/new.html.haml
@@ -9,7 +9,8 @@
       = f.input :gender, :as => :radio, :collection => [["Mrs.", "female"], ["Mr.", "male"]], :required => true
       = f.input :first_name, :required => true
       = f.input :last_name, :required => true
-      = f.input :faculty, :required => true
+      = f.input :school, :required => true, :label => "School (\"Facult&eacute;\")"
+      = f.input :lab, :required => true
       = f.input :email, :required => true
       = f.input :phone, :required => true
       = f.input :url, :label => "EPFL url or personal page"
