--- a/app/views/admin/messages/index.html.haml
+++ b/app/views/admin/messages/index.html.haml
@@ -29,7 +29,7 @@
         -#%td= link_to(words_count(message.content), admin_message_path(message))
         %td.datetime
           %span.date= sexy_date(message.created_at)
-          %span.time= message.created_at.strftime("%I:%M %p")
+          %span.time= sexy_time(message.created_at)
         %td
           - unless message.trashed?
             = button_to("delete", admin_message_path(message), :confirm => "Are you sure?", :method => :delete, :id => "delete_message_#{message.id}", :class => "button delete")
