--- a/app/views/registrations/new.html.haml
+++ b/app/views/registrations/new.html.haml
@@ -4,7 +4,7 @@
     %strong= "June 8 and 9, October 6, 2010"
   %p= "Thank you to fill out the following form precisely and clearly."
 #register
-  - semantic_form_for resource_name, resource, :url => registration_path(resource_name),  :html => { :class => "main" } do |f|
+  - semantic_form_for resource_name, resource, :url => registration_path(resource_name), :html => { :class => "main" } do |f|
     - f.inputs do
       = f.input :gender, :as => :radio, :collection => [["Mrs.", "female"], ["Mr.", "male"]], :required => true
       = f.input :first_name, :required => true
@@ -17,8 +17,8 @@
       = f.input :linkedin_url, :label => "LinkedIn url"
       = f.input :thesis_supervisor, :required => true
       = f.input :thesis_subject, :as => :text, :required => true
-      = f.input :thesis_registration_date, :as => :date
-      = f.input :thesis_admission_date, :as => :date
+      = f.input :thesis_registration_date, :as => :date, :prompt => true, :selected => resource.nil? || resource.thesis_registration_date.nil? ? 0 : resource.thesis_registration_date
+      = f.input :thesis_admission_date, :as => :date, :prompt => true, :selected => resource.nil? || resource.thesis_admission_date.nil?? 0 : resource.thesis_admission_date
       = f.input :supervisor_authorization, :as => :radio, :collection => [["Yes", "yes"], ["No", "no"]], :label => "Do you have the agreement of your thesis supervisor to participate to mintt?", :required => true
       = f.input :doctoral_school_rules, :as => :radio, :collection => [["Yes", "yes"], ["No", "no"]], :label => "Are you subject to EPFL doctoral school regulations and do you need credits?", :required => true
       = f.input :thesis_invention, :as => :text, :label => "Have you made an invention in the course of your thesis? If yes, could you briefly describe it?:"
