Added untrash to messages, trash to users Added the "Move to inbox button" in the message show view Fake user for the mail template Possibility to view all the users in a sinlge page (same for messages) Fixed the bug with the select_date helper: when a date in incomplete, add an error on the field and reset the date, this way the user has the possibility to enter the date he originally wanted to put (better than reset the date and submit the form) Changed the modules arrangements Changed the auth password

--- a/app/views/admin/mail_templates/edit.html.haml
+++ b/app/views/admin/mail_templates/edit.html.haml
@@ -22,6 +22,7 @@
     %li Email : <span>user.email</span>
     %li Phone : <span>user.phone</span>
     %li School : <span>user.school</span>
+    %li Lab : <span>user.lab</span>
     %li Url : <span>user.url</span>
     %li Linkedin url : <span>user.linkedin_url</span>
     %li Thesis supervisor : <span>user.thesis_supervisor</span>
