--- a/app/views/pages/modules.html.haml
+++ b/app/views/pages/modules.html.haml
@@ -55,20 +55,6 @@
       
   - module_box do
     .left
-      = image_tag "/images/photos/default.png", :alt => "External Speaker"
-      %h4
-        = "External speaker"
-        %em= "to be announced"
-      - link_to "", :class => "bio", :onclick => "window.open(this); return false" do
-        %span= "Biography"
-    .right
-      %h3
-        %strong= "Module 4"
-        = "Real World IP experience sharing"
-      .desc= "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-      
-  - module_box do
-    .left
       = image_tag "/images/photos/andre_catana.jpg", :alt => "André Catana"
       %h4
         = "André Catana"
@@ -77,23 +63,9 @@
         %span= "Biography"
     .right
       %h3
-        %strong= "Module 5"
+        %strong= "Module 4"
         = "Licensing"
       .desc= 'Transferring new technologies and bright inventions to industry is an important mission of the university. As an inventor, having contributed to such technologies and inventions is a great achievement, but, in order to bring them to the market, licensing to industry is a "must" - and it is an absolute reward for the inventors to help making it happen.<br /> This module focuses on licensing, the most common way to transfer technologies. It is a very interactive module combining case studies and examples to illustrate the essential components of the license agreement. It also aims to provide a basis for licensing negotiations.'
-      
-  - module_box do
-    .left
-      = image_tag "/images/photos/default.png", :alt => "External Speaker"
-      %h4
-        = "External speaker"
-        %em= "to be announced"
-      - link_to "", :class => "bio", :onclick => "window.open(this); return false" do
-        %span= "Biography"
-    .right
-      %h3
-        %strong= "Module 6"
-        = "Negotiation in practice"
-      .desc= "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
       
   - module_box do
     .left
@@ -105,12 +77,19 @@
         %span= "Biography"
     .right
       %h3
-        %strong= "Module 7"
+        %strong= "Module 5"
         = "Start-up"
       .desc= "  Create a start-up? In some cases it's going to be the only way for its founders to bring an innovation to the market while everybody else has yet to understand its potential.<br /> But before moving forward and create one, it is useful for the aspiring entrepreneur to understand what it takes to do a start-up and what kind of mindset she or he must develop to be up to this demanding and sometimes very rewarding task."
       
   - module_box do
     .left
+      = image_tag "/images/photos/corine_zuber.jpg", :alt => "Corine Zuber"
+      %h4
+        = "Corine Zuber"
+        %em= "Licensing Officer EPFL-SRI"
+      - link_to "http://sri.epfl.ch/page17399-en.html", :class => "bio", :onclick => "window.open(this); return false" do
+        %span= "Biography"
+        
       = image_tag "/images/photos/default.png", :alt => "External Speaker"
       %h4
         = "Philippe Eyries"
@@ -119,6 +98,6 @@
         %span= "Biography"
     .right
       %h3
-        %strong= "Module 8"
+        %strong= "Module 6"
         = "From innovation to sales. A long way?"
-      .desc= "He will explain and prove that you will enjoy selling: If you like people. If you can explain clearly (i) the existing pain, (ii) the solution and (iii) the value proposition. If you choose the right direction and the right person. If you accept help from your network of partners."
+      .desc= "Philippe Eyries will explain that you are going to love to sell: If you like people. If you can explain clearly (i) the existing pain, (ii) the solution and (iii) the value proposition. If you choose the right direction and the right person. If you accept help from your network of partners."
