--- a/app/views/admin/messages/show.html.haml
+++ b/app/views/admin/messages/show.html.haml
@@ -5,9 +5,11 @@
   
   .actions_left
     - if @message.unreplied?
-      = button_to("Mark as replied", admin_message_path(@message), :method => :put, :id => "reply_message_#{@message.id}", :class => "button mark_as_replied")
-    - if !@message.trashed?
-      = button_to("Move to trash", admin_message_path(@message), :confirm => "Are you sure?", :method => :delete, :id => "delete_message_#{@message.id}", :class => "button move_to_trash")
+      = button_to("Mark as replied", reply_admin_message_path(@message), :method => :put, :id => "reply_message_#{@message.id}", :class => "button mark_as_replied")
+    - if @message.trashed?
+      = button_to("Move to inbox", untrash_admin_message_path(@message), :method => :put, :id => "untrash_message_#{@message.id}", :class => "button move_to_inbox")
+    - else
+      = button_to("Move to trash", trash_admin_message_path(@message), :method => :put, :id => "trash_message_#{@message.id}", :class => "button move_to_trash")
     .spacer
   .actions_right
     = back_to_inbox_or_trash(@message)
