--- a/app/views/admin/messages/trashs.html.haml
+++ b/app/views/admin/messages/trashs.html.haml
@@ -1,17 +1,17 @@
-- title 'mintt: admin | Messages'
+- title 'mintt: admin | Trashed Messages'
 .text
-  %h3= "Messages"
+  %h3= "Trashed Messages"
   
-  .actions_right= link_to('Go to Trash', trashs_admin_messages_path)
+  .actions_right= link_to('Go to Inbox', admin_messages_path)
   
   %table
     - 5.times do
       %col{ :class => "even" }
     %tr
-      %th.icon_centered= link_to image_tag("/images/admin/unread_label_icon.png", :alt => "Unread?"), admin_messages_path(sort_parameters('read'))
-      %th.icon_centered= link_to image_tag("/images/admin/replied_label_icon.png", :alt => "Replied?"), admin_messages_path(sort_parameters('replied'))
-      %th= link_to "From", admin_messages_path(sort_parameters('sender_name'))
-      %th= link_to "Date Received", admin_messages_path(sort_parameters('created_at'))
+      %th.icon_centered= link_to image_tag("/images/admin/unread_label_icon.png", :alt => "Unread?"), trashs_admin_messages_path(sort_parameters('read'))
+      %th.icon_centered= link_to image_tag("/images/admin/replied_label_icon.png", :alt => "Replied?"), trashs_admin_messages_path(sort_parameters('replied'))
+      %th= link_to "From", trashs_admin_messages_path(sort_parameters('sender_name'))
+      %th= link_to "Date Received", trashs_admin_messages_path(sort_parameters('created_at'))
       %th
       
     - @messages.each do |message|
@@ -31,10 +31,10 @@
           %span.date= sexy_date(message.created_at)
           %span.time= sexy_time(message.created_at)
         %td
-          = button_to("trash", trash_admin_message_path(message), :method => :put, :id => "trash_message_#{message.id}", :class => "button delete")
+          = button_to("untrash", untrash_admin_message_path(message), :method => :put, :id => "untrash_message_#{message.id}", :class => "button delete")
   
   - unless params.key? :all
     = will_paginate(@messages)
-    = link_to "View all", admin_messages_path(:all => true)
+    = link_to "View all", trashs_admin_messages_path(:all => true)
   - else
-    = link_to "View with paginate", admin_messages_path
+    = link_to "View with paginate", trashs_admin_messages_path
