--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -25,4 +25,8 @@
         %td= link_to("edit", edit_admin_user_path(user))
         %td= button_to("delete", admin_user_path(user), :confirm => "Are you sure?", :method => :delete, :class => "button delete")
         
-  = will_paginate @users
+  - unless params.key? :all
+    = will_paginate(@users)
+    = link_to "View all", admin_users_path(:all => true)
+  - else
+    = link_to "View with paginate", admin_users_path
