--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -1,6 +1,6 @@
 - title 'mintt: admin | Candidates'
 .text
-  %h3= "Candidates"
+  %h3= "Candidates : #{smart_objects_objects_displayed_range(@users)} of #{smart_objects_count(@users)}"
   
   %table
     %colgroup
@@ -26,7 +26,9 @@
         %td= button_to("delete", admin_user_path(user), :confirm => "Are you sure?", :method => :delete, :class => "button delete")
         
   - unless params.key? :all
-    = will_paginate(@users)
+    = will_paginate @users
     = link_to "View all", admin_users_path(:all => true)
   - else
     = link_to "View with paginate", admin_users_path
+    
+  %p= link_to "Export all users in CSV", admin_users_path(:format => 'csv')
