--- a/app/views/admin/users/show.html.haml
+++ b/app/views/admin/users/show.html.haml
@@ -12,7 +12,7 @@
   .card
     %p
       = image_tag "/images/admin/school.png", :alt => "School"
-      = "#{@user.school.capitalize} (lab: #{@user.lab.capitalize})"
+      = "#{@user.school} (lab: #{@user.lab})"
     
     %p
       = image_tag "/images/admin/phone.png", :alt => "Phone"
