--- a/app/views/admin/messages/show.html.haml
+++ b/app/views/admin/messages/show.html.haml
@@ -17,4 +17,4 @@
   .content
     .from= "<strong>From</strong>: #{message_sender_name_with_email_and_mailto(@message, 'hex', "#{message_sender_name_with_email(@message)} wrote on #{@message.created_at}:\n\n#{@message.content}")}"
     .date= "<strong>Date Received</strong>: #{sexy_date(@message.created_at)}, #{sexy_time(@message.created_at)}"
-    .body= @message.content
+    .body= message_content(@message)
