--- a/app/views/admin/messages/trashs.html.haml
+++ b/app/views/admin/messages/trashs.html.haml
@@ -1,6 +1,6 @@
 - title 'mintt: admin | Trashed Messages'
 .text
-  %h3= "Trashed Messages"
+  %h3= "Trashed Messages : #{smart_objects_objects_displayed_range(@messages)} of #{smart_objects_count(@messages)}"
   
   .actions_right= link_to('Go to Inbox', admin_messages_path)
   
