--- a/app/views/admin/users/show.html.haml
+++ b/app/views/admin/users/show.html.haml
@@ -13,35 +13,37 @@
     %p
       = image_tag "/images/admin/school.png", :alt => "School"
       = "#{@user.school} (lab: #{@user.lab})"
-    
+      
     %p
       = image_tag "/images/admin/phone.png", :alt => "Phone"
       = @user.phone
-    
+      
     - unless @user.url.blank?
       %p
         = image_tag "/images/admin/web.png", :alt => "Url"
         = user_url(@user)
-    
+        
     - unless @user.linkedin_url.blank?
       %p
         = image_tag "/images/admin/linkedin.png", :alt => "LinkedIn"
         = user_linkedin_url(@user)
-  
+        
+    %p= "<strong>Application date</strong>: #{display_date(@user.confirmed_at)}"
+    
   .text_box
     %p= "<strong>Thesis supervisor</strong>: #{@user.thesis_supervisor}"
     %p= "<strong>Thesis subject</strong>: #{@user.thesis_subject}"
-    %p= "<strong>Thesis registration date</strong>: #{@user.thesis_registration_date}"
-    %p= "<strong>Thesis admission date</strong>: #{@user.thesis_admission_date}"
+    %p= "<strong>Thesis registration date</strong>: #{display_date(@user.thesis_registration_date)}"
+    %p= "<strong>Thesis admission date</strong>: #{display_date(@user.thesis_admission_date)}"
     %p= "<strong>Thesis invention</strong>: #{@user.thesis_invention}"
     %p= "<strong>Supervisor authorization</strong>: #{@user.supervisor_authorization}"
     %p= "<strong>Subject to EPFL doctoral school regulations and does he/she needs credits?</strong>: #{@user.doctoral_school_rules}"
     %p= "<strong>Motivation</strong>: #{@user.motivation}"
-  
+    
     %p
     - semantic_form_for [:admin, @user], :html => { :class => "main" } do |f|
       - f.inputs do
         = f.input :comment, :as => :text, :label => "SRI Comment"
-      
+        
       - f.buttons do
         = f.commit_button "Save comment"
