Added Philippe Eyries photo

--- a/app/views/pages/modules.html.haml
+++ b/app/views/pages/modules.html.haml
@@ -90,7 +90,7 @@
       - link_to "http://sri.epfl.ch/page17399-en.html", :class => "bio", :onclick => "window.open(this); return false" do
         %span= "Biography"
         
-      = image_tag "/images/photos/default.png", :alt => "External Speaker"
+      = image_tag "/images/photos/philippe_eyries.jpg", :alt => "Philippe Eyries"
       %h4
         = "Philippe Eyries"
         %em= "External speaker NEXThink Chairman"
