--- a/app/views/admin/messages/index.html.haml
+++ b/app/views/admin/messages/index.html.haml
@@ -8,8 +8,8 @@
     - 5.times do
       %col{ :class => "even" }
     %tr
-      %th.icon_centered= link_to image_tag("/images/admin/unread_label_icon.png", :alt => "Unread?"), admin_messages_path(sort_parameters('read'))
-      %th.icon_centered= link_to image_tag("/images/admin/replied_label_icon.png", :alt => "Replied?"), admin_messages_path(sort_parameters('replied'))
+      %th.icon_centered= link_to image_tag("/images/admin/unread_label_icon.png", :alt => "Unread?"), admin_messages_path(sort_parameters('read_at'))
+      %th.icon_centered= link_to image_tag("/images/admin/replied_label_icon.png", :alt => "Replied?"), admin_messages_path(sort_parameters('replied_at'))
       %th= link_to "From", admin_messages_path(sort_parameters('sender_name'))
       %th= link_to "Date Received", admin_messages_path(sort_parameters('created_at'))
       %th
