--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -7,6 +7,7 @@
     
     %link{ :href => "/stylesheets/style.css", :type => "text/css", :media => "screen", :rel => "stylesheet" }
     %link{ :href => "/stylesheets/admin.css", :type => "text/css", :media => "screen", :rel => "stylesheet" }
+    %link{ :href => "/stylesheets/print.css", :type => "text/css", :media => "print", :rel => "stylesheet" }
     
     %script{ :type => "text/javascript", :src => "http://use.typekit.com/qwi4bur.js" }
     %script{ :type => "text/javascript" }= "try{Typekit.load();}catch(e){};"
@@ -39,3 +40,5 @@
         %p= "#{ link_to 'Contact', '/contact' } |  © 2010 EPFL , SRI, CM 2-Station 10, CH-1015 Lausanne, tel. +41 (0)21 693 70 23"
     %script{ :src => "/javascripts/prototype.min.js", :type => "text/javascript" }
     %script{ :src => "/javascripts/application.js", :type => "text/javascript" }
+    
+    - google_analytics
