--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -54,3 +54,5 @@
       .spacer
       #footer
         %p= "#{ link_to 'Contact', '/contact' } |  © 2010 EPFL , SRI, CM 2-Station 10, CH-1015 Lausanne, tel. +41 (0)21 693 70 23"
+
+    - google_analytics
