--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -386,7 +386,7 @@ form.main .required_mention {
 }
 
 #flash {
-  padding:40px 0;
+  padding:40px 20px;
   text-align:center;
   background:#a5ce37;
   color:#304703;
