--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,7 @@
     
     %link{ :href => "/stylesheets/style.css", :type => "text/css", :media => "screen", :rel => "stylesheet" }
     
-    %script{ :type => "text/javascript", :src => "http://use.typekit.com/qwi4bur.js" }
+    %script{ :type => "text/javascript", :src => "http#{ request.ssl? ? 's':'' }://use.typekit.com/qwi4bur.js" }
     %script{ :type => "text/javascript" }= "try{Typekit.load();}catch(e){};"
 
   %body
